# bwoc-speaker

./: .gitignore  Cargo.toml  README.md  voices.example.toml
pysrc/: convert_thai.py  f5_generate.py  stt.py
src/: config.rs  listen.rs  main.rs  player.rs  stream.rs
src/tts/: f5_mlx.rs  f5_remote.rs  mac_say.rs  mod.rs
